tests/ui/link-native-libs/issue-43926.rs
#[link(name = "foo", cfg())] //~ ERROR malformed `link` attribute input
extern "C" {}

fn main() {}
